--- a/index.html
+++ b/index.html
@@ -2,79 +2,99 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Practicas Profesionalizantes</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <title>Practicas Profesionalizantes</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="navbar">
-            <nav class="class="navbar bg-dark border-bottom border-body" data-bs-theme="dark"">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Navbar</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Practicas</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Card 1</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Card 2</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Card 3</a>
+            </li>
+          </ul>
         </div>
-        <div class="row">
-            <!-- Tarjeta 1 -->
-            <div class="col-sm-6 col-md-4 mb-3">
-                <div class="card text-bg-success">
-                    <div class="card-header">Header</div>
-                    <div class="card-body">
-                        <h5 class="card-title">Primary card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Tarjeta 2 -->
-            <div class="col-sm-6 col-md-4 mb-3">
-                <div class="card text-bg-success">
-                    <div class="card-header">Header</div>
-                    <div class="card-body">
-                        <h5 class="card-title">Primary card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Tarjeta 3 -->
-            <div class="col-sm-6 col-md-4 mb-3">
-                <div class="card text-bg-success">
-                    <div class="card-header">Header</div>
-                    <div class="card-body">
-                        <h5 class="card-title">Primary card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>           
+      </div>
+    </nav>
+  </div>
+  <div class="container">
+    <div class="row justify-content-center align-items-center min-vh-100">
+      <!-- Tarjeta 1 -->
+      <div class="col-sm-6 col-md-4 mb-3 d-flex justify-content-center">
+        <div class="card text-bg-dark">
+          <div class="card-header">Card 1</div>
+          <div class="card-body">
+            <img src="./img/san-miguel.jpg" class="card-img-top" alt="...">
+            <h5 class="card-title">San Miguel de Tucumán</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nihil dolorem vero
+              odit, odio harum culpa amet eum maxime non, expedita maiores unde necessitatibus magni sapiente provident,
+              impedit fuga quidem.</p>
+          </div>
         </div>
+      </div>
+      <!-- Tarjeta 2 -->
+      <div class="col-sm-6 col-md-4 mb-3 d-flex justify-content-center">
+        <div class="card text-bg-dark">
+          <div class="card-header">Card 2</div>
+          <div class="card-body">
+            <img src="./img/tur-avent.jpg" class="card-img-top" alt="...">
+            <h5 class="card-title">Qué Hacer?</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit officiis modi,
+              eligendi aut tenetur ab eaque voluptatum odio vitae, illo praesentium officia adipisci quas impedit
+              mollitia aliquid, nostrum necessitatibus?</p>
+          </div>
+        </div>
+      </div>
+      <!-- Tarjeta 3 -->
+      <div class="col-sm-6 col-md-4 mb-3 d-flex justify-content-center">
+        <div class="card text-bg-dark">
+          <div class="card-header">Card 3</div>
+          <div class="card-body">
+            <img src="./img/SM-Tucuman-gastronomia.jpg" class="card-img-top" alt="...">
+            <h5 class="card-title">Gastronomia</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum non expedita cumque! Sed
+              assumenda aliquam placeat saepe adipisci magnam nisi voluptates nobis! Minus voluptatibus ab dolores?
+              Culpa, recusandae! Minus, aut?</p>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  <footer class="bg-dark text-white text-center py-4">
+    <div class="container">
+      <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#" class="text-white">Política de Privacidad</a></li>
+        <li class="list-inline-item"><a href="#" class="text-white">Términos de Servicio</a></li>
+        <li class="list-inline-item"><a href="#" class="text-white">Contacto</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 
 </html>
