--- a/navbar.html
+++ b/navbar.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <title>Navbar</title>
 </head>
+
 <body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top" data-bs-theme="dark">
+  <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top" data-bs-theme="dark">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Practicas</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../index.html" data-bs-toggle="tooltip" title="Click para volver al Home">Home</a>
-                </li>
-                <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 1">
-                  <a class="nav-link" href="../card1/card1.html">Card 1</a>
-                </li>
-                <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 2">
-                  <a class="nav-link" href="../card2/card2.html">Card 2</a>
-                </li>
-                <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 3">
-                  <a class="nav-link" href="../card3/card3.html">Card 3</a>
-                </li>
-                <li class="nav-item" data-bs-toggle="tooltip" title="Click para contactarnos">
-                  <a class="nav-link" href="../contact/contact.html">Contacto</a>
-                </li>
-              </ul>
-            </div>
+              <a class="navbar-brand" href="#">Practicas</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ms-auto">
+                      <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="../index.html"
+                              data-bs-toggle="tooltip" title="Click para volver al Home">Home</a>
+                      </li>
+                      <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 1">
+                          <a class="nav-link" href="../card1/card1.html">Card 1</a>
+                      </li>
+                      <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 2">
+                          <a class="nav-link" href="../card2/card2.html">Card 2</a>
+                      </li>
+                      <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 3">
+                          <a class="nav-link" href="../card3/card3.html">Card 3</a>
+                      </li>
+                      <li class="nav-item" data-bs-toggle="tooltip" title="Click para contactarnos">
+                          <a class="nav-link" href="../contact/contact.html">Contacto</a>
+                      </li>
+                  </ul>
+              </div>
           </div>
-        </nav>
-      </div>
+      </nav>
+  </div>
 </body>
+
+
 </html>
