--- a/contact/contact.html
+++ b/contact/contact.html
@@ -1,61 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
+    />
     <title>Contacto</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="navbar-placeholder"></div>
     <div class="container">
-        <h2>Formulario de Consulta</h2>
-        <form>
-            <!-- Campo de Nombre -->
-            <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre" required>
-            </div>
+      <h2>Formulario de Consulta</h2>
+      <form>
+        <!-- Campo de Nombre -->
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input
+            type="text"
+            class="form-control"
+            id="nombre"
+            placeholder="Ingrese su nombre"
+            required
+          />
+        </div>
 
-            <!-- Campo de Apellido -->
-            <div class="mb-3">
-                <label for="apellido" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido" required>
-            </div>
+        <!-- Campo de Apellido -->
+        <div class="mb-3">
+          <label for="apellido" class="form-label">Apellido</label>
+          <input
+            type="text"
+            class="form-control"
+            id="apellido"
+            placeholder="Ingrese su apellido"
+            required
+          />
+        </div>
 
-            <!-- Campo de Teléfono -->
-            <div class="mb-3">
-                <label for="telefono" class="form-label">Teléfono</label>
-                <input type="tel" class="form-control" id="telefono" placeholder="Ingrese su número de teléfono"
-                    required>
-            </div>
+        <!-- Campo de Teléfono -->
+        <div class="mb-3">
+          <label for="telefono" class="form-label">Teléfono</label>
+          <input
+            type="tel"
+            class="form-control"
+            id="telefono"
+            placeholder="Ingrese su número de teléfono"
+            required
+          />
+        </div>
 
-            <!-- Campo de Email -->
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Ingrese su email" required>
-            </div>
+        <!-- Campo de Email -->
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            placeholder="Ingrese su email"
+            required
+          />
+        </div>
 
-            <!-- Campo de Consulta -->
-            <div class="mb-3">
-                <label for="consulta" class="form-label">Consulta</label>
-                <textarea class="form-control" id="consulta" rows="4" placeholder="Escriba su consulta aquí..."
-                    required></textarea>
-            </div>
-
-            <!-- Botón de Enviar -->
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
+        <!-- Campo de Consulta -->
+        <div class="mb-3">
+          <label for="consulta" class="form-label">Consulta</label>
+          <textarea
+            class="form-control"
+            id="consulta"
+            rows="4"
+            placeholder="Escriba su consulta aquí..."
+            required
+          ></textarea>
+        </div>
+        <!-- Botón de Enviar -->
+        <button type="submit" class="btn btn-light" data-bs-toggle="tooltip"
+        title="Enviar consulta">Enviar</button>
+      </form>
     </div>
-    <script src="../index.js"></script>
-</body>
+    
+    <!-- Botón de WhatsApp -->
+    <button
+      class="whatsapp-button"
+      data-bs-toggle="tooltip"
+      title="Ir a WhatsApp"
+    >
+      <i class="bi bi-whatsapp"></i>
+    </button>
 
+    <footer class="bg-dark text-white text-center py-4">
+      <div>
+        <ul class="list-inline">
+          <li
+            class="list-inline-item"
+            data-bs-toggle="tooltip"
+            title="Ir a Instagram"
+          >
+            <a href="#" class="text-white me-3"
+              ><i class="bi bi-instagram"></i
+            ></a>
+          </li>
+          <li
+            class="list-inline-item"
+            data-bs-toggle="tooltip"
+            title="Ir a facebook"
+          >
+            <a href="#" class="text-white me-3"
+              ><i class="bi bi-facebook"></i
+            ></a>
+          </li>
+          <li
+            class="list-inline-item"
+            data-bs-toggle="tooltip"
+            title="Enviar email"
+          >
+            <a href="#" class="text-white me-3"
+              ><i class="bi bi-envelope"></i
+            ></a>
+          </li>
+        </ul>
+        <p>
+          &copy; 2024 Santiago Di Colantonio. Todos los derechos reservados.
+        </p>
+      </div>
+    </footer>
+    <script src="../index.js"></script>
+  </body>
 </html>
