--- a/index.html
+++ b/index.html
@@ -1,81 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
+    />
+    <title>Practicas Profesionalizantes</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <title>Practicas Profesionalizantes</title>
-</head>
-
-<body>
-  <div id="navbar-placeholder"></div>
-  <div class="container">
-    <div class="row justify-content-center align-items-center min-vh-100">
-      <!-- Tarjeta 1 -->
-      <div class="col-sm-6 col-md-4 mb-3 d-flex justify-content-center">
-        <a href="./card1/card1.html" class="text-decoration-none">
-          <div class="card text-bg-dark" data-bs-toggle="tooltip" title="Click para ir a la Card 1">
-            <div class="card-header">Card 1</div>
-            <div class="card-body">
-              <img src="./img/san-miguel.jpg" class="card-img-top" alt="...">
-              <h5 class="card-title">San Miguel de Tucumán</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nihil dolorem vero
-                odit, odio harum culpa amet eum maxime non, expedita maiores unde necessitatibus magni sapiente
-                provident,
-                impedit fuga quidem.</p>
-            </div>
-          </div>
-        </a>
-      </div>
-      <!-- Tarjeta 2 -->
-      <div class="col-sm-6 col-md-4 mb-3 d-flex justify-content-center">
-        <a href="./card2/card2.html" class="text-decoration-none">
-        <div class="card text-bg-dark" data-bs-toggle="tooltip" title="Click para ir a la Card 2">
-          <div class="card-header">Card 2</div>
-          <div class="card-body">
-            <img src="./img/tur-avent.jpg" class="card-img-top" alt="...">
-            <h5 class="card-title">Qué Hacer?</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit officiis modi,
-              eligendi aut tenetur ab eaque voluptatum odio vitae, illo praesentium officia adipisci quas impedit
-              mollitia aliquid, nostrum necessitatibus?</p>
-          </div>
-        </div>
-        </a>
-      </div>
-      <!-- Tarjeta 3 -->
-      <div class="col-sm-6 col-md-4 mb-3 d-flex justify-content-center">
-        <a href="./card3/card3.html" class="text-decoration-none">
-        <div class="card text-bg-dark" data-bs-toggle="tooltip" title="Click para ir a la Card 3">
-          <div class="card-header">Card 3</div>
-          <div class="card-body">
-            <img src="./img/SM-Tucuman-gastronomia.jpg" class="card-img-top" alt="...">
-            <h5 class="card-title">Gastronomia</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum non expedita cumque! Sed
-              assumenda aliquam placeat saepe adipisci magnam nisi voluptates nobis! Minus voluptatibus ab dolores?
-              Culpa, recusandae! Minus, aut?</p>
-          </div>
-        </div>
-        </a>
-      </div>
-    </div>
-  </div>
-  <footer class="bg-dark text-white text-center py-4">
+  <body>
+    <div id="navbar-placeholder"></div>
     <div class="container">
-      <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
-      <ul class="list-inline">
-        <li class="list-inline-item"><a href="#" class="text-white">Política de Privacidad</a></li>
-        <li class="list-inline-item"><a href="#" class="text-white">Términos de Servicio</a></li>
-        <li class="list-inline-item"><a href="#" class="text-white">Contacto</a></li>
-      </ul>
-    </div>
-  </footer>
-  <script src="./index.js"></script>
-</body>
+      <div class="row justify-content-center align-items-center min-vh-100">
+        <!-- Tarjeta 1 -->
+        <div class="col-sm-6 col-md-4 mb-3 d-flex justify-content-center">
+          <a href="./card1/card1.html" class="text-decoration-none">
+            <div
+              class="card text-bg-dark"
+              data-bs-toggle="tooltip"
+              title="Click para ir a la Card 1"
+            >
+              <div class="card-header">Card 1</div>
+              <div class="card-body">
+                <img
+                  src="./img/san-miguel.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <h5 class="card-title">San Miguel de Tucumán</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Eveniet nihil dolorem vero odit, odio harum culpa amet eum
+                  maxime non, expedita maiores unde necessitatibus magni
+                  sapiente provident, impedit fuga quidem.
+                </p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <!-- Tarjeta 2 -->
+        <div class="col-sm-6 col-md-4 mb-3 d-flex justify-content-center">
+          <a href="./card2/card2.html" class="text-decoration-none">
+            <div
+              class="card text-bg-dark"
+              data-bs-toggle="tooltip"
+              title="Click para ir a la Card 2"
+            >
+              <div class="card-header">Card 2</div>
+              <div class="card-body">
+                <img src="./img/tur-avent.jpg" class="card-img-top" alt="..." />
+                <h5 class="card-title">Qué Hacer?</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Molestias fugit officiis modi, eligendi aut tenetur ab eaque
+                  voluptatum odio vitae, illo praesentium officia adipisci quas
+                  impedit mollitia aliquid, nostrum necessitatibus?
+                </p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <!-- Tarjeta 3 -->
+        <div class="col-sm-6 col-md-4 mb-3 d-flex justify-content-center">
+          <a href="./card3/card3.html" class="text-decoration-none">
+            <div
+              class="card text-bg-dark"
+              data-bs-toggle="tooltip"
+              title="Click para ir a la Card 3"
+            >
+              <div class="card-header">Card 3</div>
+              <div class="card-body">
+                <img
+                  src="./img/SM-Tucuman-gastronomia.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <h5 class="card-title">Gastronomia</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                  non expedita cumque! Sed assumenda aliquam placeat saepe
+                  adipisci magnam nisi voluptates nobis! Minus voluptatibus ab
+                  dolores? Culpa, recusandae! Minus, aut?
+                </p>
+              </div>
+            </div>
+          </a>
+        </div>
+        
+      </div>
+      </div>
+      <!-- Botón de WhatsApp -->
+<button class="whatsapp-button" data-bs-toggle="tooltip" title="Ir a WhatsApp">
+  <i class="bi bi-whatsapp"></i>
+</button>
+
+    <footer class="bg-dark text-white text-center py-4">
+      <div>
+        <ul class="list-inline">
+          <li
+            class="list-inline-item"
+            data-bs-toggle="tooltip"
+            title="Ir a Instagram"
+          >
+            <a href="#" class="text-white me-3"
+              ><i class="bi bi-instagram"></i
+            ></a>
+          </li>
+          <li
+            class="list-inline-item"
+            data-bs-toggle="tooltip"
+            title="Ir a facebook"
+          >
+            <a href="#" class="text-white me-3"
+              ><i class="bi bi-facebook"></i
+            ></a>
+          </li>
+          <li
+            class="list-inline-item"
+            data-bs-toggle="tooltip"
+            title="Enviar email"
+          >
+            <a href="#" class="text-white me-3"
+              ><i class="bi bi-envelope"></i
+            ></a>
+          </li>
+        </ul>
+        <p>
+          &copy; 2024 Santiago Di Colantonio. Todos los derechos reservados.
+        </p>
+      </div>
+    </footer>
+    <script src="./index.js"></script>
+  </body>
 </html>
