--- a/card2/card2.html
+++ b/card2/card2.html
@@ -11,6 +11,8 @@
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" />
   <title>Card 2</title>
 </head>
 
@@ -19,6 +21,35 @@
   <div class="container">
     <h1>Card 2</h1>
   </div>
+  <!-- Botón de WhatsApp -->
+  <a href="https://wa.me/5493812133639" target="_blank" class="whatsapp-button" data-bs-toggle="tooltip" title="Ir a WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+  </a>
+
+  <footer class="bg-dark text-white text-center py-4">
+    <div>
+      <ul class="list-inline">
+        <li class="list-inline-item" data-bs-toggle="tooltip" title="Ir a Instagram">
+          <a href="https://www.instagram.com/tucumanturismo" class="text-white me-3" target="_blank">
+            <i class="bi bi-instagram"></i>
+          </a>
+        </li>
+        <li class="list-inline-item" data-bs-toggle="tooltip" title="Ir a Facebook">
+          <a href="https://www.facebook.com/tucumanturismo" class="text-white me-3" target="_blank">
+            <i class="bi bi-facebook"></i>
+          </a>
+        </li>
+        <li class="list-inline-item" data-bs-toggle="tooltip" title="Enviar email">
+          <a href="mailto:informes@tucumanturismo.gob.ar" class="text-white me-3">
+            <i class="bi bi-envelope"></i>
+          </a>
+        </li>
+      </ul>
+      <p>
+        &copy; 2024 Santiago Di Colantonio. Todos los derechos reservados.
+      </p>
+    </div>
+  </footer>
   <script src="../index.js"></script>
 </body>
 
