--- a/navbar.html
+++ b/navbar.html
@@ -15,35 +15,34 @@
 
 <body>
   <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top" data-bs-theme="dark">
-          <div class="container-fluid">
-              <a class="navbar-brand" href="#">Practicas</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav ms-auto">
-                      <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="../index.html"
-                              data-bs-toggle="tooltip" title="Click para volver al Home">Home</a>
-                      </li>
-                      <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 1">
-                          <a class="nav-link" href="../card1/card1.html">Card 1</a>
-                      </li>
-                      <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 2">
-                          <a class="nav-link" href="../card2/card2.html">Card 2</a>
-                      </li>
-                      <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 3">
-                          <a class="nav-link" href="../card3/card3.html">Card 3</a>
-                      </li>
-                      <li class="nav-item" data-bs-toggle="tooltip" title="Click para contactarnos">
-                          <a class="nav-link" href="../contact/contact.html">Contacto</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </nav>
+    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Practicas</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html" data-bs-toggle="tooltip" title="Click para volver al Home">Home</a>
+            </li>
+            <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 1">
+              <a class="nav-link" href="../card1/card1.html">San Miguel de Tucumán</a>
+            </li>
+            <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 2">
+              <a class="nav-link" href="../card2/card2.html">Qué hacer?</a>
+            </li>
+            <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 3">
+              <a class="nav-link" href="../card3/card3.html">Gastronomia</a>
+            </li>
+            <li class="nav-item" data-bs-toggle="tooltip" title="Click para contactarnos">
+              <a class="nav-link" href="../contact/contact.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </div>
 </body>
 
