--- a/card1/card1.html
+++ b/card1/card1.html
@@ -21,14 +21,14 @@
   <div class="container">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../img/card1/casa-gobierno.jpg" class="d-block w-100" alt="casa-gobierno">
+        <div class="carousel-item active" data-bs-interval="2000">
+          <img src="../img/card1/casa-gobierno.jpg" class="w-50" alt="casa-gobierno">
         </div>
-        <div class="carousel-item">
-          <img src="../img/card1/bicentenario.jpg" class="d-block w-100" alt="monumento">
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="../img/card1/bicentenario.jpg" class=" w-50" alt="monumento">
         </div>
-        <div class="carousel-item">
-          <img src="../img/card1/catedral.jpg" class="d-block w-100" alt="catedral">
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="../img/card1/catedral.jpg" class=" w-50" alt="catedral">
         </div>
       </div>
     </div>
