--- a/card2/card2.html
+++ b/card2/card2.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet"
+  <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" />
   <title>Card 2</title>
 </head>
@@ -19,13 +19,68 @@
 <body>
   <div id="navbar-placeholder"></div>
   <div class="container">
-    <h1>Card 2</h1>
-  </div>
-  <!-- Botón de WhatsApp -->
-  <a href="https://wa.me/5493812133639" target="_blank" class="whatsapp-button" data-bs-toggle="tooltip" title="Ir a WhatsApp">
-    <i class="bi bi-whatsapp"></i>
-  </a>
+    <!-- Sección 1 -->
+    <div class="row align-items-center my-4">
+      <div class="col-md-6">
+        <img src="../img/card2/plaza-indep.jpg" class="img-fluid" alt="plaza independencia">
+      </div>
+      <div class="datos col-md-6">
+        <h3>Plaza independencia</h3>
+        <p>Ubicada en el centro de la ciudad abarcando aproximadamente una ha, fue enmarcada originalmente en 1685. En
+          sus orígenes cumplió la función de Plaza de Armas hasta que, en 1857, fue transformada en un paseo público y
+          es al día de hoy el más concurrido de la capital tucumana.</p>
+          <a href="https://es.wikipedia.org/wiki/Plaza_Independencia_(Tucum%C3%A1n)" target="_blank" class="btn btn-dark" data-bs-toggle="tooltip" title="Click para ir a la plaza">Conocer más</a>
 
+      </div>
+    </div>
+
+    <!-- Sección 2 -->
+    <div class="row align-items-center my-4">
+      <div class="datos col-md-6">
+        <h3>El Siambón</h3>
+        <p>El Monasterio Cristo Rey, está ubicado en el departamento de Tafí Viejo más precisamente en la localidad de
+          "El Siambón" dentro del circuito Las Yungas, a 64,7 km de la Ciudad de San Miguel de Tucumán.</p>
+          <a href="http://monasteriocristorey.com.ar/" target="_blank" class="btn btn-dark" data-bs-toggle="tooltip" title="Click para ir a la plaza">Conocer más</a>
+      </div>
+      <div class="col-md-6">
+        <img src="../img/card2/el-siambon.jpg" class="img-fluid" alt="el siambon">
+      </div>
+    </div>
+
+    <!-- Sección 3 -->
+    <div class="row align-items-center my-4">
+      <div class="col-md-6">
+        <img src="../img/card2/san-pedro.jpg" class="img-fluid" alt="san pedro">
+      </div>
+      <div class="datos col-md-6">
+        <h3>San Pedro</h3>
+        <p>Es una pequeña ciudad y comuna rural ubicada en el Departamento Trancas, en el noroeste de la provincia de
+          Tucumán, Argentina. Es considerada como la primera villa turística del "Jardín de la República" y es llamada
+          "La Sucursal del Cielo".</p>
+          <a href="https://es.wikipedia.org/wiki/San_Pedro_de_Colalao" target="_blank" class="btn btn-dark" data-bs-toggle="tooltip" title="Click para ir a la plaza">Conocer más</a>
+      </div>
+    </div>
+
+    <!-- Sección 4 -->
+    <div class="row align-items-center my-4">
+      <div class="datos col-md-6">
+        <h3>Dique La Angostura</h3>
+        <p>El lago la angostura o embalse La Angostura es un lago artificial, embalse de aguas dulces producido por el
+          dique de La Angostura, ubicado en la provincia argentina de Tucumán. Se encuentra al pie del Cerro Nuñorco, en
+          la margen sur del embalse. Fue construido en la década del 70.</p>
+          <a href="https://es.wikipedia.org/wiki/Lago_El_Mollar" target="_blank" class="btn btn-dark" data-bs-toggle="tooltip" title="Click para ir a la plaza">Conocer más</a>
+      </div>
+      <div class="col-md-6">
+        <img src="../img/card2/dique-mollar-tafi.jpg" class="img-fluid" alt="dique langostura">
+      </div>
+    </div>
+
+    <!-- Botón de WhatsApp -->
+    <a href="https://wa.me/5493812133639" target="_blank" class="whatsapp-button" data-bs-toggle="tooltip"
+      title="Ir a WhatsApp">
+      <i class="bi bi-whatsapp"></i>
+    </a>
+  </div>
   <footer class="bg-dark text-white text-center py-4">
     <div>
       <ul class="list-inline">
@@ -45,9 +100,7 @@
           </a>
         </li>
       </ul>
-      <p>
-        &copy; 2024 Santiago Di Colantonio. Todos los derechos reservados.
-      </p>
+      <p>&copy; 2024 Santiago Di Colantonio. Todos los derechos reservados.</p>
     </div>
   </footer>
   <script src="../index.js"></script>
