--- a/card2/card2.html
+++ b/card2/card2.html
@@ -40,7 +40,7 @@
         <h3>El Siambón</h3>
         <p>El Monasterio Cristo Rey, está ubicado en el departamento de Tafí Viejo más precisamente en la localidad de
           "El Siambón" dentro del circuito Las Yungas, a 64,7 km de la Ciudad de San Miguel de Tucumán.</p>
-          <a href="http://monasteriocristorey.com.ar/" target="_blank" class="btn btn-dark" data-bs-toggle="tooltip" title="Click para ir a la plaza">Conocer más</a>
+          <a href="http://monasteriocristorey.com.ar/" target="_blank" class="btn btn-dark" data-bs-toggle="tooltip" title="Click para ir al Monasterio">Conocer más</a>
       </div>
       <div class="col-md-6">
         <img src="../img/card2/el-siambon.jpg" class="img-fluid" alt="el siambon">
@@ -57,7 +57,7 @@
         <p>Es una pequeña ciudad y comuna rural ubicada en el Departamento Trancas, en el noroeste de la provincia de
           Tucumán, Argentina. Es considerada como la primera villa turística del "Jardín de la República" y es llamada
           "La Sucursal del Cielo".</p>
-          <a href="https://es.wikipedia.org/wiki/San_Pedro_de_Colalao" target="_blank" class="btn btn-dark" data-bs-toggle="tooltip" title="Click para ir a la plaza">Conocer más</a>
+          <a href="https://es.wikipedia.org/wiki/San_Pedro_de_Colalao" target="_blank" class="btn btn-dark" data-bs-toggle="tooltip" title="Click para ir a San Pedro">Conocer más</a>
       </div>
     </div>
 
@@ -68,7 +68,7 @@
         <p>El lago la angostura o embalse La Angostura es un lago artificial, embalse de aguas dulces producido por el
           dique de La Angostura, ubicado en la provincia argentina de Tucumán. Se encuentra al pie del Cerro Nuñorco, en
           la margen sur del embalse. Fue construido en la década del 70.</p>
-          <a href="https://es.wikipedia.org/wiki/Lago_El_Mollar" target="_blank" class="btn btn-dark" data-bs-toggle="tooltip" title="Click para ir a la plaza">Conocer más</a>
+          <a href="https://es.wikipedia.org/wiki/Lago_El_Mollar" target="_blank" class="btn btn-dark" data-bs-toggle="tooltip" title="Click para ir al Dique">Conocer más</a>
       </div>
       <div class="col-md-6">
         <img src="../img/card2/dique-mollar-tafi.jpg" class="img-fluid" alt="dique langostura">
