--- a/card3/card3.html
+++ b/card3/card3.html
@@ -2,27 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" />
-    <title>Card 3</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" />
+  <title>Card 3</title>
 </head>
 
 <body>
-    <div id="navbar-placeholder"></div>
-    <div class="container">
-        <h1>Card 3</h1>
+  <div id="navbar-placeholder"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-6 col-md-4">
+        <img src="../img/card3/empanadas.jpg" class="img-fixed rounded" alt="empanadas">
       </div>
-      <!-- Botón de WhatsApp -->
-  <a href="https://wa.me/5493812133639" target="_blank" class="whatsapp-button" data-bs-toggle="tooltip" title="Ir a WhatsApp">
+      <div class="col-6 col-md-4">
+        <img src="../img/card3/humita.jpg" class="img-fixed rounded" alt="humita">
+      </div>
+      <div class="col-6 col-md-4">
+        <img src="../img/card3/locro.jpg" class="img-fixed rounded" alt="locro">
+      </div>
+      <div class="col-6 col-md-4">
+        <img src="../img/card3/Sanguche-de-Milanesa.jpg" class="img-fixed rounded" alt="sand. milanesa">
+      </div>
+      <div class="col-6 col-md-4">
+        <img src="../img/card3/panchuque.jpg" class="img-fixed rounded" alt="panchuque">
+      </div>
+      <div class="col-6 col-md-4">
+        <img src="../img/card3/Carbonada.jpg" class="img-fixed rounded" alt="masamorra">
+      </div>
+    </div>
+  </div>
+  
+  
+  <!-- Botón de WhatsApp -->
+  <a href="https://wa.me/5493812133639" target="_blank" class="whatsapp-button" data-bs-toggle="tooltip"
+    title="Ir a WhatsApp">
     <i class="bi bi-whatsapp"></i>
   </a>
 
@@ -50,7 +72,7 @@
       </p>
     </div>
   </footer>
-    <script src="../index.js"></script>
+  <script src="../index.js"></script>
 </body>
 
 </html>
