--- a/card3/card3.html
+++ b/card3/card3.html
@@ -21,10 +21,75 @@
   <div class="container">
     <div class="row">
       <div class="col-6 col-md-4">
-        <img src="../img/card3/empanadas.jpg" class="img-fixed rounded" alt="empanadas">
+        <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#empanadas">
+          <img src="../img/card3/empanadas.jpg" class="img-fixed rounded" alt="empanadas" data-bs-toggle="tooltip"
+            title="Ver receta">
+        </button>
+        <div class="modal fade" id="empanadas" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+          aria-labelledby="staticBackdropLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Empanadas Tucumanas</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <li>La masa: unir todos los ingredientes para formar una masa. Darle forma de cilindro, dividirlo en
+                  rodajas
+                  de 1 cm de espesor. Amasar cada rodaja de masa para que quede bien unida y tierna. Tapar y dejar
+                  descansar.</li>
+                <li>El relleno: hervir 3 litros de agua con las verduritas para el caldo y la cucharada de sal gruesa.
+                  Agregar el matambre desgrasado y dejar cocinar hasta que esté muy tierno (por lo menos 1 1/2 hora).
+                  Escurrirlo, colar el caldo y ponerlo en la heladera.</li>
+                <li>Raspar bien el matambre para que quede bien limpio.</li>
+                <li>Separar la carne en hebras, con las manos, como quien deshilacha una tela. Cortar las hebras en
+                  cuadraditos bien pequeños.</li>
+                <li>Limpiar y picar las cebollas de verdeo.</li>
+                <li>Derretir en una cacerola la grasa de pella con el aceite.</li>
+                <li>Rehogar la cebolla común hasta que esté tierna. Retirarla del fuego y agregar la cebollita de verdeo
+                  picada, sal, pimienta, pimentón, comino, azúcar y ají molido.</li>
+                <li>Agregar 2 tazas del caldo que se reservó, llevar al fuego, incorporar el matambre cortadito.</li>
+                <li>Hervir todo junto unos minutos. Tapar, dejar enfriar en la heladera hasta el día siguiente.</li>
+                <li>Armado: estirar cada bollito en forma circular, rellenar con la mezcla fría, poner un poco de huevo
+                  duro
+                  picado, hacer las empanadas con 13 repulgos, acomodar en placas engrasadas y hornear a fuego fuerte.
+                </li>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="col-6 col-md-4">
-        <img src="../img/card3/humita.jpg" class="img-fixed rounded" alt="humita">
+        <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#humita">
+          <img src="../img/card3/humita.jpg" class="img-fixed rounded" alt="humita" data-bs-toggle="tooltip"
+          title="Ver receta">
+        </button>
+        <div class="modal fade" id="humita" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+          aria-labelledby="staticBackdropLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="humita">Humita</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <li>Rallar los choclos o desgranarlos y luego mixearlos. Debe quedar como una crema. Reservar.</li>
+                <li>Cocinar la calabaza y hacer un puré. Reservar.</li>
+                <li>Calentar el aceite de oliva en una olla y agregar la cebolla y el pimiento morrón cortado bien pequeño. Cocinar hasta que la cebolla esté transparente. Agregar el tomate cortado en cubitos junto a la cebolla de verdeo cortada bien fina. Salpimentar y bajar el fuego a mínimo.</li>
+                <li>Añadir los choclos triturados y cocinar por 5 minutos. Agregar el puré de calabaza, una cucharada de azúcar, salpimentar y condimentar a gusto.</li>
+                <li>Cocinar a fuego bajo hasta que espese, unos 10 minutos más aproximadamente. En el caso que se seque mucho agregar un poco de leche.</li>
+                <li>Una vez listo retirar del fuego y mezclar con queso fresco en cubos hasta que se derrita.</li>
+                <li>Servir en cazuelas con verdeo o ciboulette por encima.</li>                
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="col-6 col-md-4">
         <img src="../img/card3/locro.jpg" class="img-fixed rounded" alt="locro">
@@ -40,8 +105,8 @@
       </div>
     </div>
   </div>
-  
-  
+
+
   <!-- Botón de WhatsApp -->
   <a href="https://wa.me/5493812133639" target="_blank" class="whatsapp-button" data-bs-toggle="tooltip"
     title="Ir a WhatsApp">
