finalicé las recetas y está creada la carpeta store con las imagenes

--- a/navbar.html
+++ b/navbar.html
@@ -17,7 +17,12 @@
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Practicas</a>
+        <a class="navbar-brand" href="../index.html"><img
+          src="../img/marca_tucuman-digital.png"
+          class="logo"
+          data-bs-toggle="tooltip"
+          title="Home"
+        /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,6 +40,9 @@
             </li>
             <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 3">
               <a class="nav-link" href="../card3/card3.html">Gastronomia</a>
+            </li>
+            <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Tienda">
+              <a class="nav-link" href="../store/store.html">Tienda</a>
             </li>
             <li class="nav-item" data-bs-toggle="tooltip" title="Click para contactarnos">
               <a class="nav-link" href="../contact/contact.html">Contacto</a>
