--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="col-sm-6 col-md-4 mb-3 d-flex justify-content-center">
         <a href="./card2/card2.html" class="text-decoration-none">
           <div class="card text-bg-dark" data-bs-toggle="tooltip" title="Click para ir a la Card 2">
-            <div class="card-header">¿Qué hacer?</div>
+            <div class="card-header">Qué hacer?</div>
             <div class="card-body">
               <img src="./img/tur-avent.jpg" class="card-img-top" alt="..." />
               <h5 class="card-title">Qué Hacer?</h5>
