--- a/navbar.html
+++ b/navbar.html
@@ -10,49 +10,49 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+  <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir al Carrito">
+    <a class="nav-link" href="../carrito/carrito.html"><i class="fas fa-shopping-cart custom-icon"></i>Carrito</a>
+  </li>
   <title>Navbar</title>
 </head>
 
 <body>
-  
-    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top" data-bs-theme="dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img
-          src="../img/marca_tucuman-digital.png"
-          class="logo"
-          data-bs-toggle="tooltip"
-          title="Home"
-        /></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html" data-bs-toggle="tooltip" title="Click para volver al Home">Home</a>
-            </li>
-            <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 1">
-              <a class="nav-link" href="../card1/card1.html">San Miguel de Tucumán</a>
-            </li>
-            <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 2">
-              <a class="nav-link" href="../card2/card2.html">Qué hacer?</a>
-            </li>
-            <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 3">
-              <a class="nav-link" href="../card3/card3.html">Gastronomia</a>
-            </li>
-            <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Tienda">
-              <a class="nav-link" href="../store/store.html">Tienda</a>
-            </li>
-            <li class="nav-item" data-bs-toggle="tooltip" title="Click para contactarnos">
-              <a class="nav-link" href="../contact/contact.html">Contacto</a>
-            </li>
-          </ul>
-        </div>
+
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html"><img src="../img/marca_tucuman-digital.png" class="logo"
+          data-bs-toggle="tooltip" title="Home" /></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../index.html" data-bs-toggle="tooltip"
+              title="Click para volver al Home">Home</a>
+          </li>
+          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 1">
+            <a class="nav-link" href="../card1/card1.html">San Miguel de Tucumán</a>
+          </li>
+          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 2">
+            <a class="nav-link" href="../card2/card2.html">Qué hacer?</a>
+          </li>
+          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Card 3">
+            <a class="nav-link" href="../card3/card3.html">Gastronomia</a>
+          </li>
+          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir a la Tienda">
+            <a class="nav-link" href="../store/store.html">Tienda</a>
+          </li>
+          <li class="nav-item" data-bs-toggle="tooltip" title="Click para contactarnos">
+            <a class="nav-link" href="../contact/contact.html">Contacto</a>
+          </li>
+          <li class="nav-item" data-bs-toggle="tooltip" title="Click para ir al Carrito">
+            <a class="nav-link" href="../cart/cart.html"><i class="bi bi-cart"></i>Carrito</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-  
+    </div>
+  </nav>
 </body>
-
-
 </html>
